fixed margin left issue with white space on right side of page

--- a/styles/global.css
+++ b/styles/global.css
@@ -2,87 +2,95 @@
 @tailwind components;
 @tailwind utilities;
 
+/* * { // for debugging purposes
+  border: 1px solid red !important;
+} */
+
 .png-container {
-    width: 100%;
-    height: 450px; /* Adjust the height as needed */
-    overflow: hidden; /* This will hide any part of the SVG that overflows the container */
-  }
-  
+  width: 100%;
+  height: 450px; /* Adjust the height as needed */
+  overflow: hidden; /* This will hide any part of the SVG that overflows the container */
+}
+
 .full-width-png {
-    width: 100%;
-    height: auto;
-    display: block; /* This removes any whitespace around the SVG */
-  }
+  width: 100%;
+  height: auto;
+  display: block; /* This removes any whitespace around the SVG */
+}
 
 html {
-    scroll-behavior: smooth;
-  }
-  
+  scroll-behavior: smooth;
+}
+
 .scroll-btn {
-    position: fixed;
-    bottom: 50px;
-    right: 50px;
-    width: 50px;
-    height: 50px;
-    background-color: rgb(255, 255, 255, 0.8);
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-  }
-  
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  background-color: rgb(255, 255, 255, 0.8);
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
 .scroll-btn:hover {
-    background-color: rgba(255, 255, 255, 0.3);
-  }
-  
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
 .scroll-arrow {
-    width: 24px;
-    animation: bounce 3s infinite;
-  }
+  width: 24px;
+  animation: bounce 3s infinite;
+}
 
-  .image-container-index {
-    position: relative;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/SearleLogo.jpeg');
-  }
+.image-container-index {
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/SearleLogo.jpeg");
+}
 
-  
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
-    }
-    40% {
-      transform: translateY(-10px);
-    }
-    60% {
-      transform: translateY(-5px);
-    }
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
   }
-  
-  .custom-shape-divider-top-1693420302 {
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+.custom-shape-divider-top-1693420302 {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
 }
 
 .custom-shape-divider-top-1693420302 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 150px;
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 150px;
 }
 
 .custom-shape-divider-top-1693420302 .shape-fill {
-    fill: #B91C1C;
+  fill: #b91c1c;
 }
 
 .custom-shape-divider-top-1693420398 {
